25-26/ING-3-SOFT/Syntaxic Analysis/Exemple4/syn.output
Terminals unused in grammar

   err


Grammar

    0 $accept: main_program $end

    1 OP: '+'
    2   | '-'

    3 expression: idf
    4           | NUMBER

    5 EXPR: expression OP expression

    6 INSTR: idf '=' EXPR ';'

    7 INSTRUCTION: INSTR INSTRUCTION
    8            | /* empty */

    9 NUMBER: cst
   10       | real

   11 initialisation: idf '=' NUMBER

   12 liste_variable: idf ',' liste_variable
   13               | idf
   14               | initialisation

   15 Type: mc_flt
   16     | mc_int

   17 DEC: Type liste_variable ';'

   18 DECLARATION: DEC DECLARATION
   19            | /* empty */

   20 main_program: mc_main '(' ')' '{' DECLARATION INSTRUCTION '}'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 20
')' (41) 20
'+' (43) 1
',' (44) 12
'-' (45) 2
';' (59) 6 17
'=' (61) 6 11
'{' (123) 20
'}' (125) 20
error (256)
mc_main (258) 20
mc_int (259) 16
mc_flt (260) 15
idf (261) 3 6 11 12 13
cst (262) 9
real (263) 10
err (264)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
OP (20)
    on left: 1 2, on right: 5
expression (21)
    on left: 3 4, on right: 5
EXPR (22)
    on left: 5, on right: 6
INSTR (23)
    on left: 6, on right: 7
INSTRUCTION (24)
    on left: 7 8, on right: 7 20
NUMBER (25)
    on left: 9 10, on right: 4 11
initialisation (26)
    on left: 11, on right: 14
liste_variable (27)
    on left: 12 13 14, on right: 12 17
Type (28)
    on left: 15 16, on right: 17
DEC (29)
    on left: 17, on right: 18
DECLARATION (30)
    on left: 18 19, on right: 18 20
main_program (31)
    on left: 20, on right: 0


state 0

    0 $accept: . main_program $end

    mc_main  shift, and go to state 1

    main_program  go to state 2


state 1

   20 main_program: mc_main . '(' ')' '{' DECLARATION INSTRUCTION '}'

    '('  shift, and go to state 3


state 2

    0 $accept: main_program . $end

    $end  shift, and go to state 4


state 3

   20 main_program: mc_main '(' . ')' '{' DECLARATION INSTRUCTION '}'

    ')'  shift, and go to state 5


state 4

    0 $accept: main_program $end .

    $default  accept


state 5

   20 main_program: mc_main '(' ')' . '{' DECLARATION INSTRUCTION '}'

    '{'  shift, and go to state 6


state 6

   20 main_program: mc_main '(' ')' '{' . DECLARATION INSTRUCTION '}'

    mc_int  shift, and go to state 7
    mc_flt  shift, and go to state 8

    $default  reduce using rule 19 (DECLARATION)

    Type         go to state 9
    DEC          go to state 10
    DECLARATION  go to state 11


state 7

   16 Type: mc_int .

    $default  reduce using rule 16 (Type)


state 8

   15 Type: mc_flt .

    $default  reduce using rule 15 (Type)


state 9

   17 DEC: Type . liste_variable ';'

    idf  shift, and go to state 12

    initialisation  go to state 13
    liste_variable  go to state 14


state 10

   18 DECLARATION: DEC . DECLARATION

    mc_int  shift, and go to state 7
    mc_flt  shift, and go to state 8

    $default  reduce using rule 19 (DECLARATION)

    Type         go to state 9
    DEC          go to state 10
    DECLARATION  go to state 15


state 11

   20 main_program: mc_main '(' ')' '{' DECLARATION . INSTRUCTION '}'

    idf  shift, and go to state 16

    $default  reduce using rule 8 (INSTRUCTION)

    INSTR        go to state 17
    INSTRUCTION  go to state 18


state 12

   11 initialisation: idf . '=' NUMBER
   12 liste_variable: idf . ',' liste_variable
   13               | idf .

    '='  shift, and go to state 19
    ','  shift, and go to state 20

    $default  reduce using rule 13 (liste_variable)


state 13

   14 liste_variable: initialisation .

    $default  reduce using rule 14 (liste_variable)


state 14

   17 DEC: Type liste_variable . ';'

    ';'  shift, and go to state 21


state 15

   18 DECLARATION: DEC DECLARATION .

    $default  reduce using rule 18 (DECLARATION)


state 16

    6 INSTR: idf . '=' EXPR ';'

    '='  shift, and go to state 22


state 17

    7 INSTRUCTION: INSTR . INSTRUCTION

    idf  shift, and go to state 16

    $default  reduce using rule 8 (INSTRUCTION)

    INSTR        go to state 17
    INSTRUCTION  go to state 23


state 18

   20 main_program: mc_main '(' ')' '{' DECLARATION INSTRUCTION . '}'

    '}'  shift, and go to state 24


state 19

   11 initialisation: idf '=' . NUMBER

    cst   shift, and go to state 25
    real  shift, and go to state 26

    NUMBER  go to state 27


state 20

   12 liste_variable: idf ',' . liste_variable

    idf  shift, and go to state 12

    initialisation  go to state 13
    liste_variable  go to state 28


state 21

   17 DEC: Type liste_variable ';' .

    $default  reduce using rule 17 (DEC)


state 22

    6 INSTR: idf '=' . EXPR ';'

    idf   shift, and go to state 29
    cst   shift, and go to state 25
    real  shift, and go to state 26

    expression  go to state 30
    EXPR        go to state 31
    NUMBER      go to state 32


state 23

    7 INSTRUCTION: INSTR INSTRUCTION .

    $default  reduce using rule 7 (INSTRUCTION)


state 24

   20 main_program: mc_main '(' ')' '{' DECLARATION INSTRUCTION '}' .

    $default  reduce using rule 20 (main_program)


state 25

    9 NUMBER: cst .

    $default  reduce using rule 9 (NUMBER)


state 26

   10 NUMBER: real .

    $default  reduce using rule 10 (NUMBER)


state 27

   11 initialisation: idf '=' NUMBER .

    $default  reduce using rule 11 (initialisation)


state 28

   12 liste_variable: idf ',' liste_variable .

    $default  reduce using rule 12 (liste_variable)


state 29

    3 expression: idf .

    $default  reduce using rule 3 (expression)


state 30

    5 EXPR: expression . OP expression

    '+'  shift, and go to state 33
    '-'  shift, and go to state 34

    OP  go to state 35


state 31

    6 INSTR: idf '=' EXPR . ';'

    ';'  shift, and go to state 36


state 32

    4 expression: NUMBER .

    $default  reduce using rule 4 (expression)


state 33

    1 OP: '+' .

    $default  reduce using rule 1 (OP)


state 34

    2 OP: '-' .

    $default  reduce using rule 2 (OP)


state 35

    5 EXPR: expression OP . expression

    idf   shift, and go to state 29
    cst   shift, and go to state 25
    real  shift, and go to state 26

    expression  go to state 37
    NUMBER      go to state 32


state 36

    6 INSTR: idf '=' EXPR ';' .

    $default  reduce using rule 6 (INSTR)


state 37

    5 EXPR: expression OP expression .

    $default  reduce using rule 5 (EXPR)
